--- a/gm.html
+++ b/gm.html
@@ -11,6 +11,36 @@
 <body>
     <canvas id="canvas"></canvas>
     <script type="module">
+        const textureFormatStringToEnum = {
+            'rgba8unorm': 0x00000016,
+            'rgba8unorm-srgb': 0x00000017,
+            'bgra8unorm': 0x0000001B,
+            'bgra8unorm-srgb': 0x0000001C,
+        };
+
+        const textureFormatEnumToString = {};
+        for (const [name, value] of Object.entries(textureFormatStringToEnum)) {
+            textureFormatEnumToString[value] = name;
+        }
+
+        function enumFromTextureFormat(name) {
+            const value = textureFormatStringToEnum[name];
+            if (value === undefined) {
+                console.warn(`[WebGPU] Unknown texture format: ${name}`);
+                return textureFormatStringToEnum['bgra8unorm'];
+            }
+            return value;
+        }
+
+        function textureFormatFromEnum(value) {
+            const format = textureFormatEnumToString[value];
+            if (!format) {
+                console.warn(`[WebGPU] Unknown texture format enum: 0x${value.toString(16)}`);
+                return 'bgra8unorm';
+            }
+            return format;
+        }
+
         async function init() {
             const canvas = document.getElementById('canvas');
             canvas.width = window.innerWidth;
@@ -30,14 +60,6 @@
             });
 
             const context = canvas.getContext('webgpu');
-            const format = navigator.gpu.getPreferredCanvasFormat();
-            console.log('[WebGPU] Preferred canvas format:', format);
-            context.configure({
-                device,
-                format,
-                usage: GPUTextureUsage.RENDER_ATTACHMENT | GPUTextureUsage.COPY_DST
-            });
-            console.log('[WebGPU] Canvas configured');
 
             function createSolidTexture(device, rgba, label) {
                 const texture = device.createTexture({
@@ -105,6 +127,20 @@
             // Load and use WASM module for finding start position
             const wasmResponse = await fetch('gm.wasm');
             const wasmBytes = await wasmResponse.arrayBuffer();
+
+            const webgpuImports = {
+                create_instance(descriptorPtr) {
+                    console.log('[WebGPU] wasm requested instance (stub)', descriptorPtr);
+                    return 1;
+                },
+                surface_get_preferred_format() {
+                    const preferred = navigator.gpu.getPreferredCanvasFormat();
+                    const value = enumFromTextureFormat(preferred);
+                    console.log('[WebGPU] Preferred canvas format (JS):', preferred, '-> enum', value);
+                    return value;
+                }
+            };
+
             const wasmModule = await WebAssembly.instantiate(wasmBytes, {
                 wasi_snapshot_preview1: {
                 // Not needed right now:
@@ -119,13 +155,25 @@
                     args_sizes_get: () => 0,
                     args_get: () => 0,
                 */
-                }
+                },
+                webgpu: webgpuImports,
             });
 
             const wasmInstance = wasmModule.instance;
             const memory = wasmInstance.exports.memory;
             const find_start_position = wasmInstance.exports.find_start_position;
             const generate_mesh = wasmInstance.exports.generate_mesh;
+            const gm_get_preferred_canvas_format = wasmInstance.exports.gm_get_preferred_canvas_format;
+
+            const preferredFormatEnum = gm_get_preferred_canvas_format();
+            const format = textureFormatFromEnum(preferredFormatEnum);
+            console.log(`[WebGPU] Preferred canvas format (via WASM): ${format} (enum 0x${preferredFormatEnum.toString(16)})`);
+            context.configure({
+                device,
+                format,
+                usage: GPUTextureUsage.RENDER_ATTACHMENT | GPUTextureUsage.COPY_DST
+            });
+            console.log('[WebGPU] Canvas configured');
 
             // Flatten the 2D map into 1D array
             const flatMap = new Int32Array(mapWidth * mapHeight);
